@@ -26,13 +26,16 @@ pam_slurm is available for download from
 </ul>
 <h1>Related Software</h1>
 <ul>
+
 <li>Authentication plugins</li>
 <ul>
 <li><b>Munge</b><br>
 In order to compile the "auth/munge" authentication plugin for SLURM, you will need
 to build and install Munge, available from 
 <a href="ftp://ftp.llnl.gov/pub/linux/munge/">ftp://ftp.llnl.gov/pub/linux/munge</a>.
-</li> </ul>
+</li>
+</ul>
+
 <li>Interconnect plugins</li>
 <ul>
 <li><b>QsNet</b><br>
@@ -44,6 +47,7 @@ a corresponding /etc/elanhosts configuration file, used to map
 hostnames to Elan IDs. The libelanhosts source is available from
 <a href="ftp://ftp.llnl.gov/pub/linux/libelanhosts/">ftp://ftp.llnl.gov/pub/linux/libelanhosts</a>.
 </ul>
+
 <li>MPI versions supported</li>
 <ul>
 <li><a href="http://www.mpi-softtech.com/">ChaMPIon, MPI Software Technology</a></li>
@@ -56,6 +60,7 @@ hostnames to Elan IDs. The libelanhosts source is available from
 <li><a href="http://www.open-mpi.org">Open MPI</a></li>
 <li><a href="http://www.quadrics.com/">Quadrics MPI</a></li>
 </ul>
+
 <li>Schedulers</li>
 <ul>
 <li><a href="http://www.llnl.gov/LCdocs/dpcs/">Livermore Computing Resource Manager (LCRM/DPCS)</a></li>
@@ -65,8 +70,15 @@ Maui Scheduler</a></li>
 <li><a href="http://www.clusterresources.com/pages/products/moab-cluster-suite.php">
 Moab Cluster Suite</a></li>
 </ul>
+
+<li>Task Affinity plugins</li>
+<ul>
+<li><a href="http://www.open-mpi.org/software/plpa">
+Portable Linux Processor Affinity (PLPA)</a></li>
+</ul> 
+
 </ul>
 
-<p style="text-align:center;">Last modified 29 September 2006</p>
+<p style="text-align:center;">Last modified 8 October 2006</p>
 
 <!--#include virtual="footer.txt"-->
