@@ -15,7 +15,7 @@ task_affinity_la_SOURCES = 	\
 	numa.c \
 	schedutils.c \
 	task_affinity.c
-task_affinity_la_LDFLAGS = $(SO_LDFLAGS) $(NUMA_LIBS) $(PLUGIN_FLAGS)
+task_affinity_la_LDFLAGS = $(SO_LDFLAGS) $(NUMA_LIBS) $(PLPA_LIBS) $(PLUGIN_FLAGS)
 task_affinity_la_LIBADD  = $(top_builddir)/src/common/libcommon.la
 else
 pkglib_LTLIBRARIES =
